--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                  tiene que ver con la pregunta?? 
                  Pues ni yo se xd
                 </p>
-                <a href="file:///C:/Users/XPC/Desktop/HTML/Respuesta1.html">Respuesta1</a>
+                <a href="answer1.html">Respuesta1</a>
             </article>
 
             <!--No tienes q hacerlo si no quieres-->
@@ -55,7 +55,7 @@
                 <p>El "Ñoamp?" nacio de el ruido que paso por mi cabeza
                     en ese momento. Talvez eso sea una pista: MI LOCA CABEZA.
                 </p>
-                <a href="file:///C:/Users/XPC/Desktop/HTML/Respuesta2.html">Respuesta2</a>
+                <a href="answer2.html">Respuesta2</a>
             </article>
 
             <!--La verdad esto puede ser aburrido para ti-->
@@ -65,7 +65,7 @@
                     <h1> TOY CIEGO!!</h1>
                 </hgroup>
                 <p> SIP, en conclusión TOY CIEGO </p>
-                <a href="file:///C:/Users/XPC/Desktop/HTML/Respuesta3.html">Respuesta3</a>
+                <a href="answer3.html">Respuesta3</a>
             </article>
 
             <!--podrias cansarte de mi y de mis mamadas?-->
@@ -78,6 +78,6 @@
         <!--si llegaste hasta aqui supongo que de verdad quieres saber no?-->
         <!--bueno aqui empieza lo complicado-->
         <!--esto te puede ayudar "https://superpatanegra.com/texto/index.php"-->
-        <!--ve a este link "file:///C:/Users/XPC/Desktop/HTML/Playa2.html"-->
+        <!--ve a este link "Playa2.html"-->
     </body>
 </html>
