--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
         <p>
             Bueno eso es todo y si no tienes la respuesta pues diay si. A lo mejor el codigo
             fuente tiene algo más. Bueno adios ^^
+            BTW ve a este link cuando conozcas la pagina de ayuda ok?
         </p>
+        <a href="Playa2.html">LISTA?</a>
         <!--si llegaste hasta aqui supongo que de verdad quieres saber no?-->
         <!--bueno aqui empieza lo complicado-->
         <!--esto te puede ayudar "https://superpatanegra.com/texto/index.php"-->
-        <!--ve a este link "Playa2.html"-->
     </body>
 </html>
