--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             fuente tiene algo más. Bueno adios ^^
             BTW ve a este link cuando conozcas la pagina de ayuda ok?
             </p>
-            <a href="Playa2.html">LISTA?</a>
+            <a href="Playa2.html">Playa2</a>
         </article>
-       </section>
+    </section>
         <!--si llegaste hasta aqui supongo que de verdad quieres saber no?-->
         <!--bueno aqui empieza lo complicado-->
         <!--esto te puede ayudar "https://superpatanegra.com/texto/index.php"-->
     </body>
-</html>
+</html
