--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
             </article>
 
             <!--podrias cansarte de mi y de mis mamadas?-->
-        <article>
-            <p>
-            Bueno eso es todo y si no tienes la respuesta pues diay si. A lo mejor el codigo
-            fuente tiene algo más. Bueno adios ^^
-            BTW ve a este link cuando conozcas la pagina de ayuda ok?
-            </p>
-            <a href="Playa2.html">Playa2</a>
-        </article>
-    </section>
+            <article>
+                    <hgroup>
+                        <h1>Lista?</h1>
+                    </hgroup>
+                <p>Bueno eso es todo y si no tienes la respuesta pues diay si. A lo mejor el codigo
+                    fuente tiene algo más. Bueno adios ^^
+                    BTW ve a este link cuando conozcas la pagina de ayuda ok?
+                </p>
+                <a href="Playa2.html">Playa2</a>
+            </article>
+        </section>
         <!--si llegaste hasta aqui supongo que de verdad quieres saber no?-->
         <!--bueno aqui empieza lo complicado-->
         <!--esto te puede ayudar "https://superpatanegra.com/texto/index.php"-->
